# csi

./: .gitignore  README.md  main.ipynb  pyproject.toml  requirements.txt
src/mat/: __init__.py  mat.py  util.py
